--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 annotated-types==0.6.0
 anyio==3.7.1
+asyncpg==0.27.0
 click==8.1.7
 exceptiongroup==1.2.0
-fastapi==0.104.1
+fastapi==0.89.1
+ormar>=0.12.1
 h11==0.14.0
 idna==3.6
-pydantic==2.5.2
+psycopg2-binary==2.9.9
+pydantic==1.6.2
 pydantic_core==2.14.5
 sniffio==1.3.0
-starlette==0.27.0
+starlette==0.22.0
 typing_extensions==4.8.0
-uvicorn==0.24.0.post1
+uvicorn==0.20.0
