--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ anyio==3.7.1
 asyncpg==0.27.0
 click==8.1.7
 exceptiongroup==1.2.0
-fastapi==0.89.1
+fastapi
 ormar>=0.12.1
 h11==0.14.0
 idna==3.6
 psycopg2-binary==2.9.9
-pydantic==1.6.2
+pydantic
 pydantic_core==2.14.5
 sniffio==1.3.0
 starlette==0.22.0
